--- a/styles.css
+++ b/styles.css
@@ -3,20 +3,43 @@
     padding: 0;
     box-sizing: border-box;
 }
-body{
+main {
     width: 100vw;
     height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: rgb(240, 240, 240);
+}
+.primary-button {
+    margin: 20px;
+    padding: 10px 15px;
+    font-size: 1.5rem;
+    background-color: white;
+    border-radius: 10px;
+    border: 1px solid black;
+    box-shadow: 5px 5px black;
+    transition: all 200ms ease-in-out;
+}
+.primary-button:hover {
+    transition: all 200ms ease-in-out;
+    transform: translateX(-3px) translateY(-3px);
+    box-shadow: 10px 10px;
+}
+#grid-res-display{
+    font-size: 1.2rem;
 }
 .container {
-    width: 900px;
+    width: min(80vh, 80vw);
     aspect-ratio: 1/1;
-    border: 1px solid black;
-    margin: 0 auto;
+    outline: 1px solid black;
     display: flex;
     flex-wrap: wrap;
+    overflow: hidden;
+    box-shadow: 10px 10px black;
 }
-.grid{
-    width: calc(100%/16);
+.grid {
     aspect-ratio: 1/1;
-    border: 1px solid black;
+    border: 1px solid black
 }
